--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,11 @@
     "array": "cpp",
     "initializer_list": "cpp",
     "utility": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "system_error": "cpp",
+    "functional": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "string": "cpp"
   }
 }
